@@ -1,5 +1,6 @@
 DIST IO-Compress-Zlib-2.001.tar.gz 131858 RMD160 3df33cf2adc3b1832132a5322f80f9056615e2bf SHA1 b688a1739f8ee4c0f75291e66213788eb1facf99 SHA256 a698c38b5423d427dfb4d5b2c71b78c3c64fcdfd5d5eb01dc0288668330a79b7
 DIST IO-Compress-Zlib-2.003.tar.gz 132445 RMD160 55417aa53e1a6450e1ebf64ee7a8f9a646680984 SHA1 fd261025f93b4ed33f797d9ff573bc08bf824e8b SHA256 80a84de2cee9528fa4c317d242b504a6a50eb2545791fdfe51ee8b43a5449460
+DIST IO-Compress-Zlib-2.004.tar.gz 133210 RMD160 01967eeb986bf18d18974cdbfa1080526e8e8475 SHA1 5681a5f7c60d145282c625255774a5bf07ca3fda SHA256 118d06d9c0c528aff68da9f92d64fdb4bdb0f880e37c9887f624a1a1b7c0d82d
 EBUILD IO-Compress-Zlib-2.001.ebuild 601 RMD160 fd0b1a81e27100c50a4099002bfe10ab9885a945 SHA1 9eb1a9b36e55ab408c35a42cd92a0110c100a86b SHA256 bc571c5401a2fa84f08fc9ae70d1d9c2f27263d7712bdb0d8bff7a66afd83b25
 MD5 5df82ad1617cf538480bdb1973d7bd59 IO-Compress-Zlib-2.001.ebuild 601
 RMD160 fd0b1a81e27100c50a4099002bfe10ab9885a945 IO-Compress-Zlib-2.001.ebuild 601
@@ -8,10 +9,14 @@ EBUILD IO-Compress-Zlib-2.003.ebuild 608 RMD160 855bd0691690a191b5e2a84f80b19343
 MD5 c2f568e832312da6f2690951ef580f9b IO-Compress-Zlib-2.003.ebuild 608
 RMD160 855bd0691690a191b5e2a84f80b1934359334129 IO-Compress-Zlib-2.003.ebuild 608
 SHA256 884a458c153952e6d58b3f41698e231e527b5a27e9ef74e2501086b3580fcec7 IO-Compress-Zlib-2.003.ebuild 608
-MISC ChangeLog 1537 RMD160 93ed84159434cf1d61ad3c9947debefc39582b12 SHA1 c983f6ea200e1ebaf7da30a03e3261c913fe6eaa SHA256 2c5ddd55c21e331a09201b1341f8d27d7239c0c47e34e709e59ede46039d6299
-MD5 3e9c00630fd0de73ad24f7735cda2be2 ChangeLog 1537
-RMD160 93ed84159434cf1d61ad3c9947debefc39582b12 ChangeLog 1537
-SHA256 2c5ddd55c21e331a09201b1341f8d27d7239c0c47e34e709e59ede46039d6299 ChangeLog 1537
+EBUILD IO-Compress-Zlib-2.004.ebuild 608 RMD160 e5b833f196c7764163f1e6dbcf111ac3b3519477 SHA1 697b26c08839f2b9b096c7bf18ba79b7a2d5c948 SHA256 e6560bf58c477a03d2eeaa268d8c91c53a0a548090b57bb09bfc0158986c1370
+MD5 223a93f6e5806db858126ed90c6e1615 IO-Compress-Zlib-2.004.ebuild 608
+RMD160 e5b833f196c7764163f1e6dbcf111ac3b3519477 IO-Compress-Zlib-2.004.ebuild 608
+SHA256 e6560bf58c477a03d2eeaa268d8c91c53a0a548090b57bb09bfc0158986c1370 IO-Compress-Zlib-2.004.ebuild 608
+MISC ChangeLog 1681 RMD160 4675ab11dabb22507fb74173125eb10d33074663 SHA1 76a104f2181e7d17b47db97e8a02ebb67d963493 SHA256 3901c11a051333f448a37169f05e7ed2e83942fe3f472b87fa6d8ca8db45797f
+MD5 3ba50d3106523358299cd6267d9969ee ChangeLog 1681
+RMD160 4675ab11dabb22507fb74173125eb10d33074663 ChangeLog 1681
+SHA256 3901c11a051333f448a37169f05e7ed2e83942fe3f472b87fa6d8ca8db45797f ChangeLog 1681
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -22,3 +27,6 @@ SHA256 24255d85ff204fe7ef9d62b6373d2a8857590157e9932f060bac6a4618fc2deb files/di
 MD5 a8f30a1f938e1ede1ce301e63abee8b0 files/digest-IO-Compress-Zlib-2.003 268
 RMD160 d8ebf2ce293f6215ed26d8d89112d08242afe2e5 files/digest-IO-Compress-Zlib-2.003 268
 SHA256 6fc4a9e0b1cf9bad1139058d2a29d5cbab9a39f288a233d266287d851a09b80a files/digest-IO-Compress-Zlib-2.003 268
+MD5 8df0ff348f24e893ff379748a0af5247 files/digest-IO-Compress-Zlib-2.004 268
+RMD160 d271c6317299da09c7e901e9d2d3847e117b5cb4 files/digest-IO-Compress-Zlib-2.004 268
+SHA256 8bece53e33d47d7de6312b4b5b86b0cb314e014047f5dbc9e8414505af8f8ece files/digest-IO-Compress-Zlib-2.004 268
