@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/IO-Compress-Zlib
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Compress-Zlib/ChangeLog,v 1.11 2007/01/05 20:10:10 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Compress-Zlib/ChangeLog,v 1.12 2007/03/09 22:11:36 mcummings Exp $
+
+*IO-Compress-Zlib-2.004 (09 Mar 2007)
+
+  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
+  +IO-Compress-Zlib-2.004.ebuild:
+  Version bump
 
 *IO-Compress-Zlib-2.003 (05 Jan 2007)
 
